--- a/src/components/layout/AskColor.css
+++ b/src/components/layout/AskColor.css
@@ -4,7 +4,7 @@
   height: 50px;
   top: 25px;
   right: 25px;
-  background-image: linear-gradient(to bottom, rgba(140, 133, 41, 0.9), transparent);
+  background-image: linear-gradient(to bottom, rgba(140, 133, 41, 0.9), red);
   border-radius: 50%;
   cursor: pointer;
   /* animation: cvwsgdcv 1.6s cubic-bezier(1,1,1,1) infinite; */
