--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -1,20 +1,20 @@
 :root {
-  --color-one-o: rgba(38, 38, 38, 0.835);
+  --color-one-o: rgba(38, 38, 38, 0.9);
   --color-one: rgba(38, 38, 38);
-  --color-two-o: rgba(140, 133, 41, 0.767);
+  --color-two-o: rgba(140, 133, 41, 0.9);
   --color-two: rgba(140, 133, 41);
-  --color-three-o: rgba(86, 97, 124, 0.767);
+  --color-three-o: rgba(86, 97, 124, 0.9);
   --color-three: rgba(86, 97, 124);
-  --color-four-o: rgba(110, 54, 26, 0.842);
+  --color-four-o: rgba(110, 54, 26, 0.9);
   --color-four: rgba(110, 54, 26);
   --color-one-title: #56617c;
   --color-two-title: #8C8529;
   --color-three-title: #6E361A;
   --color-four-title: #262626;
-  /* --color-one: rgba(210, 180, 140, 0.829);
-  --color-two: rgba(0, 128, 128, 0.87);
-  --color-three: rgba(255, 99, 71, 0.863);
-  --color-four: rgba(216, 191, 216, 0.829); */
+  /* --color-one-o: rgba(210, 180, 140, 0.829);
+  --color-two-o: rgba(0, 128, 128, 0.87);
+  --color-three-o: rgba(255, 99, 71, 0.863);
+  --color-four-o: rgba(216, 191, 216, 0.829); */
   --page-title-font-size: 37vh;
   --page-title-font-size: 20vw;
   --page-title-font-weight: 100;
