--- a/src/components/layout/AskColor.css
+++ b/src/components/layout/AskColor.css
@@ -1,14 +1,26 @@
 #select-color {
   position: absolute;
-  width: 50px;
-  height: 50px;
   top: 25px;
   right: 25px;
   background: transparent;
-  border-radius: 50%;
-  cursor: pointer;
   overflow: hidden;
   opacity: 1 !important;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+}
+
+/* open styles */
+#select-color.open {
+  width: 240px;
+  height: 240px;
+}
+
+/* close styles */
+#select-color.close {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+
 }
 
 #select-color.close .color-one,
@@ -45,5 +57,4 @@
   top: 50%;
   width: 35px;
   transform: skew(30deg) translateX(-3px);
-  /* transform-origin: ; */
 }
