--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -1,5 +1,5 @@
 :root {
-  --color-one: rgba(38, 38, 38);
+  --color-one: rgb(38, 38, 38);
   --color-one-o: rgba(38, 38, 38, 0.9);
   --color-one-title: #56617c;
   --color-two: rgba(140, 133, 41);
