--- a/src/styles/keyframes.css
+++ b/src/styles/keyframes.css
@@ -53,7 +53,7 @@
     opacity: 0;
   }
   100% {
-    transform: skew(45deg);
+    transform: skew(var(--skew-degree));
     opacity: 1;
   }
 }
@@ -63,7 +63,7 @@
     transform: skew(0);
   }
   100% {
-    transform: skew(-45deg);
+    transform: skew(var(--skew-degree-n));
   }
 }
 
@@ -73,7 +73,7 @@
     opacity: 0;
   }
   100% {
-    transform: skew(-45deg);
+    transform: skew(var(--skew-degree-n));
     opacity: 1;
   }
 }
@@ -83,6 +83,6 @@
     transform: skew(0);
   }
   100% {
-    transform: skew(45deg);
+    transform: skew(var(--skew-degree));
   }
 }
