--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -1,6 +1,6 @@
 :root {
   /* pack 1 */
-  /* --color-one: rgb(38, 38, 38);
+  --color-one: rgb(38, 38, 38);
   --color-one-o: rgba(38, 38, 38, 0.9);
   --color-one-title: #56617c;
   --color-two: rgba(140, 133, 41);
@@ -11,7 +11,7 @@
   --color-three-title: #6E361A;
   --color-four: rgba(110, 54, 26);
   --color-four-o: rgba(110, 54, 26, 0.9);
-  --color-four-title: #262626; */
+  --color-four-title: #262626;
   /* pack 2 */
   /* --color-one: rgb(210, 180, 140);
   --color-one-o: rgba(210, 180, 140, 0.9);
@@ -37,10 +37,9 @@
   --color-three-title: #6E361A;
   --color-four: rgb(90, 90, 90);
   --color-four-o: rgba(90, 90, 90, 0.5);
-  --color-four-title: #262626; 
-  --layers-border-width: 0px; */
+  --color-four-title: #262626; */
   /* pack 4 */
-  --color-one: rgba(0,0,0,0);
+  /* --color-one: rgba(0,0,0,0);
   --color-one-o: rgba(0,0,0,0);
   --color-one-title: #56617c;
   --color-two: rgba(0,0,0,0);
@@ -52,7 +51,7 @@
   --color-four: rgba(0,0,0,0);
   --color-four-o: rgba(0,0,0,0);
   --color-four-title: #262626;
-  --layers-border-color: #999;
+  --layers-border-color: #999; */
   
   /* utils */
   --page-title-font-size: 18vw;
