--- a/src/components/layout/AskColor.css
+++ b/src/components/layout/AskColor.css
@@ -15,17 +15,15 @@
 }
 
 .color-one {
-  background: var(--color-two);
+  background: var(--color-one);
 }
 
 .color-two {
   background: var(--color-three);
-
 }
 
 .color-three {
-  background: var(--color-one);
-
+  background: var(--color-two);
 }
 
 /* open styles */
@@ -41,6 +39,17 @@
 #select-color.open .color-three {
   width: 33.33%;
   height: 100%;
+}
+
+#select-color.open .pack-one,
+#select-color.open .pack-two,
+#select-color.open .pack-three {
+  background: hotpink;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  margin: 0 auto;
+  cursor: pointer;
 }
 
 /* close styles */
