--- a/src/components/layout/AskColor.css
+++ b/src/components/layout/AskColor.css
@@ -1,3 +1,9 @@
+#select-color-container {
+  width: 100%; 
+  height: 100%; 
+  background: #333;
+}
+
 #select-color {
   position: absolute;
   top: 25px;
@@ -18,17 +24,14 @@
 
 .color-one {
   background: var(--color-one);
-  z-index: 3;
 }
 
 .color-two {
   background: var(--color-three);
-  z-index: 2;
 }
 
 .color-three {
   background: var(--color-two);
-  z-index: 1;
 }
 
 /* open styles */
