--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -1,6 +1,6 @@
 :root {
   /* pack 1 */
-  /* --color-one: rgb(38, 38, 38);
+  --color-one: rgb(38, 38, 38);
   --color-one-o: rgba(38, 38, 38, 0.9);
   --color-one-title: #56617c;
   --color-two: rgba(140, 133, 41);
@@ -12,7 +12,7 @@
   --color-four: rgba(110, 54, 26);
   --color-four-o: rgba(110, 54, 26, 0.9);
   --color-four-title: #262626;
-  --layers-border-color: transparent; */
+  --layers-border-color: transparent;
   /* pack 2 */
   /* --color-one: rgb(210, 180, 140);
   --color-one-o: rgba(210, 180, 140, 0.9);
@@ -40,16 +40,16 @@
   --color-four-o: rgba(90, 90, 90, 0.5);
   --color-four-title: #262626; */
   /* pack 4 */
-  --color-one: rgba(0,0,0,0);
+  --color-one: rgba(255,255,255,1);
   --color-one-o: rgba(0,0,0,0);
   --color-one-title: #56617c;
-  --color-two: rgba(0,0,0,0);
+  --color-two: rgba(255,255,255,1);
   --color-two-o: rgba(0,0,0,0);
   --color-two-title: #8C8529;
-  --color-three: rgba(0,0,0,0);
+  --color-three: rgba(255,255,255,1);
   --color-three-o: rgba(0,0,0,0);
   --color-three-title: #6E361A;
-  --color-four: rgba(0,0,0,0);
+  --color-four: rgba(255,255,255,1);
   --color-four-o: rgba(0,0,0,0);
   --color-four-title: #262626;
   --layers-border-color: #999;
