--- a/src/components/layout/AskColor.css
+++ b/src/components/layout/AskColor.css
@@ -1,7 +1,14 @@
-#select-color-container {
-  width: 100%; 
-  height: 100%; 
+#select-color-container.active {
+  position: absolute;
+  width: 100vw; 
+  height: 100vh; 
   background: #333;
+  /* make it with z index active or deactive */
+}
+
+#select-color-container.deactive {
+  width: 0;
+  height: 0;
 }
 
 #select-color {
