--- a/src/styles/keyframes.css
+++ b/src/styles/keyframes.css
@@ -19,22 +19,22 @@
 @keyframes layersComeAnim2 {
   0% {
     transform: skew(0);
-    /* border-radius: 70px; */
+    border-radius: 70px;
   }
   100% {
     transform: skew(45deg);
-    /* border-radius: 0; */
+    border-radius: 0;
   }
 }
 
 @keyframes layersGoAnim1 {
   0% {
-    /* border-radius: 70px; */
+    border-radius: 70px;
     transform: skew(-45deg);
   }
   100% {
     transform: skew(0deg);
-    /* border-radius: 0; */
+    border-radius: 0;
   }
 }
 
@@ -84,5 +84,42 @@
   }
   100% {
     transform: skew(var(--skew-degree));
+  }
+}
+
+
+@keyframes closeSelectColorLineAnim1 {
+  0% {
+    transform: rotateZ(-90deg) translateY(8px) translateX(-9px);
+  }
+  50% {
+    transform: rotateZ(-90deg) translateY(10px) translateX(-7px);
+  }
+  100% {
+    transform: rotateZ(-90deg) translateY(8px) translateX(-9px);
+  }
+}
+
+@keyframes closeSelectColorLineAnim2 {
+  0% {
+    transform: translateY(9px) translateX(22px);
+  }
+  50% {
+    transform: translateY(7px) translateX(24px);
+  }
+  100% {
+    transform: translateY(9px) translateX(22px);
+  }
+}
+
+@keyframes closeSelectColorLineAnim3 {
+  0% {
+    transform: rotateZ(45deg) translateY(-8px) translateX(22.5px);
+  }
+  50% {
+    transform: rotateZ(45deg) translateY(-10px) translateX(22.5px);
+  }
+  100% {
+    transform: rotateZ(45deg) translateY(-8px) translateX(22.5px);
   }
 }
