--- a/src/components/layout/AskColor.css
+++ b/src/components/layout/AskColor.css
@@ -5,10 +5,6 @@
   background: #0000;
 }
 
-#select-color-container.deactive {
-  z-index: -9999;
-}
-
 #select-color-container.active .close-select-color {
   width: 33px;
   height: 33px;
@@ -18,7 +14,6 @@
   right: 30px;
   border-radius: 10px;
   border-top-right-radius: 20px;
-  z-index: 22;
   cursor: pointer;
 }
 
@@ -69,6 +64,8 @@
   top: 55px;
   right: 18px;
   opacity: 0;
+  outline-color: transparent;
+  border-color: transparent;
 }
 
 #select-color-container.active .desc {
@@ -130,12 +127,22 @@
 #select-color.open .pack-one,
 #select-color.open .pack-two,
 #select-color.open .pack-three {
-  background: hotpink;
+  background-image: linear-gradient(to top, #ccc, #666, #ccc);
   width: 50px;
   height: 50px;
   border-radius: 25px;
   margin: 0 auto;
   cursor: pointer;
+  animation: sdjbvksjdvkjdv 8s cubic-bezier(1,1,1,1) infinite;
+}
+
+@keyframes sdjbvksjdvkjdv {
+  0% {
+    transform: rotateZ(0);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
 }
 
 /* close styles */
